[package]
name = "additions"
license = "MIT"
description = "This is an example crate as part of the book's tutorial"
version = "0.1.0"
authors = ["Jaxel Rojas <jaxelr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
