[package]
name = "macros"
version = "0.1.0"
authors = ["Jaxel Rojas <jaxelr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro = { path = "../19_06_macros/hello_macro" }
hello_macro_derive = { path = "../19_06_macros/hello_macro_derive" }