[package]
name = "grrs"
version = "0.1.0"
authors = ["Jaxel Rojas <jaxelr@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tool to search files"
reamde = "README.md"
homepage = "https://github.com/jaxelr/grrs"
repository = "https://github.com/jaxelr/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
