[package]
name = "sqlite"
version = "0.1.0"
authors = ["Jaxel Rojas <jaxelr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See here to install libsqlite3-sys https://github.com/rusqlite/rusqlite#notes-on-building-rusqlite-and-libsqlite3-sys
[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]