[package]
name = "character_sets"
version = "0.1.0"
authors = ["Jaxel Rojas <jaxelr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
data-encoding = "2.3.2"
url = "2.2.1"
percent-encoding = "2.1.0"