[package]
name = "extracting_links"
version = "0.1.0"
authors = ["Jaxel Rojas <jaxelr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
select = "0.5.0"
tokio = "1.5.0"
error-chain = "0.12.4"